--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Mafy Bot</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="profile-pic">
-            <img src="photo-profil.jpg" alt="Photo Profil">
-        </div>
-        <h1>MAFY BOT</h1>
-        <p>Website ini bertujuan untuk update informasi nomor whatsapp Mafy-Bot yang aktif secara berkala.</p>
-        <p>Silakan klik tombol di bawah untuk mengetahui nomor whatsapp Mafy-Bot yang aktif.</p>
-        <p><strong>T:</strong> Botnya bisa ngapain aja bang?</p>
-        <p><strong>J:</strong> Ketik aja /menu nanti muncul semua perintah yang bisa dilakukan bot.</p>
-        <button>WhatsApp Bot 01</button>
-        <button>WhatsApp Bot 02</button>
-        <div class="social-media">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="whatsapp-icon.png" alt="WhatsApp"></a>
-        </div>
-        <p>Made with <span class="heart">♥️</span> by Mafy</p>
+<div class="container">
+    <img src="path-to-your-image.jpg" alt="Photo Profil" class="profile-pic">
+    <h1>MAFY BOT</h1>
+    <p>Website ini bertujuan untuk update informasi nomor whatsapp Mafy-Bot yang aktif secara berkala.</p>
+    <p>T: Botnya bisa ngapain aja bang?</p>
+    <p>J: Ketik aja /menu nanti muncul semua perintah yang bisa dilakukan bot.</p>
+    <button>WhatsApp Bot 01</button>
+    <button>WhatsApp Bot 02</button>
+    <div class="social-media">
+        <!-- Contoh link sosial media, tambahkan href sesuai dengan link sosial media Anda -->
+        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a> | <a href="#">WhatsApp</a>
     </div>
-</body>
-  </html>
+    <p class="heart">Made with ♥️ by Mafy</p>
+</div>
