--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- Other head content -->
+  <script src="https://kit.fontawesome.com/1fee5905c1.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MAFY BOT Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
 <div class="container">
-    <img src="path-to-your-image.jpg" alt="Photo Profil" class="profile-pic">
-    <h1>MAFY BOT</h1>
+    <div class="profile-pic">
+        <!-- Pastikan mengganti 'path_to_your_image.jpg' dengan path gambar Anda -->
+        <img src="gambar-photo-profil.jpg" alt="Profile Picture">
+    </div>
+    <h1><strong>MAFY BOT</strong></h1>
     <p>Website ini bertujuan untuk update informasi nomor whatsapp Mafy-Bot yang aktif secara berkala.</p>
     <p>T: Botnya bisa ngapain aja bang?</p>
     <p>J: Ketik aja /menu nanti muncul semua perintah yang bisa dilakukan bot.</p>
     <button>WhatsApp Bot 01</button>
     <button>WhatsApp Bot 02</button>
-    <div class="social-media">
-        <!-- Contoh link sosial media, tambahkan href sesuai dengan link sosial media Anda -->
-        <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">Twitter</a> | <a href="#">WhatsApp</a>
-    </div>
-    <p class="heart">Made with ♥️ by Mafy</p>
+    <div class="social-links">
+        <!-- Media Sosial Icons -->
+<div class="social-media-icons">
+    <a href="https://www.facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+    <a href="https://wa.me/yourphonenumber" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </div>
+    <p class="footer">Made with ♥️ by Mafy</p>
+</div>
+
+</body>
+</html>
