--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     <p>Website ini bertujuan untuk update informasi nomor whatsapp Mafy-Bot yang aktif secara berkala.</p>
     <p>T: Botnya bisa ngapain aja bang?</p>
     <p>J: Ketik aja /menu nanti muncul semua perintah yang bisa dilakukan bot.</p>
-    <button>WhatsApp Bot 01</button>
-    <button>WhatsApp Bot 02</button>
+    <button>
+    <a href="https://wa.me/33525330188?text=%2Fmenu" target="_blank">WhatsApp Bot [ON]</a>
+    </button>
     <div class="social-links">
         <!-- Media Sosial Icons -->
 <div class="social-media-icons">
-    <a href="https://www.facebook.com" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
-    <a href="https://www.instagram.com" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.twitter.com" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
-    <a href="https://wa.me/yourphonenumber" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://www.facebook.com/oo0.UwU.0oo" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.instagram.com/neko.saikou" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.x.com/xiaocia" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+    <a href="https://wa.me/6283145799197" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
 </div>
     <p class="footer">Made with ♥️ by Mafy</p>
 </div>
