--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <p>Website ini bertujuan untuk update informasi nomor whatsapp Mafy-Bot yang aktif secara berkala.</p>
     <p>T: Botnya bisa ngapain aja bang?</p>
     <p>J: Ketik aja /menu nanti muncul semua perintah yang bisa dilakukan bot.</p>
-    <button>
-    <a href="https://wa.me/33525330188?text=%2Fmenu" target="_blank">WhatsApp Bot [ON]</a>
-    </button>
+    <button onclick="window.open('https://wa.me/33525330188?text=%2Fmenu', '_blank')" style="cursor: pointer;">WhatsApp Bot 01 [ON]</button>
     <div class="social-links">
         <!-- Media Sosial Icons -->
 <div class="social-media-icons">
