--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="https://kit.fontawesome.com/1fee5905c1.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
     <title>MAFY BOT</title>
     <link rel="stylesheet" href="style.css">
 </head>
